# esp-aliyun-iot-linksdk

./: CMakeLists.txt  ChangeLog.md  README.md
components/data-model/: aiot_dm_api.c
components/ota/: aiot_ota_api.c
core/: aiot_mqtt_api.c  aiot_state_api.h
core/sysdep/: core_adapter.c
demos/: bootstrap_posix_demo.c  cota_basic_demo.c  data_model_basic_demo.c  devinfo_posix_demo.c  diag_basic_demo.c  fota_basic_demo.c  fota_posix_demo.c  logpost_basic_demo.c  mqtt_basic_demo.c  mqtt_broadcast_demo.c  mqtt_rrpc_demo.c  mqtt_v5_basic_demo.c  ntp_posix_demo.c  shadow_basic_demo.c  subdev_basic_demo.c  task_posix_demo.c
example/: CMakeLists.txt  README.md  sdkconfig.defaults
example/main/: Kconfig.projbuild  main.c
portfiles/: README.md
portfiles/aiot_port/: TODO.md  freertos_port.c
